// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlButton should render 1`] = `
<DocumentFragment>
  <div
    class="LayoutControls__ControlButton-j2iwgi-0 dcGsYY"
  />
</DocumentFragment>
`;

exports[`ControlButton should render active 1`] = `
<DocumentFragment>
  <div
    class="LayoutControls__ControlButton-j2iwgi-0 gNexJa"
  />
</DocumentFragment>
`;

exports[`ControlButton should render changed with dot 1`] = `
<DocumentFragment>
  <div
    class="LayoutControls__ControlButton-j2iwgi-0 bMHgZY"
  />
</DocumentFragment>
`;

exports[`LayoutControls should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center space-x-1"
  >
    <div
      class="group"
      data-testid="LayoutControls__grid"
    >
      <div
        class="LayoutControls__ControlButton-j2iwgi-0 gNexJa"
        data-testid="LayoutControls__grid--icon"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            grid-view.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="group"
      data-testid="LayoutControls__list"
    >
      <div
        class="LayoutControls__ControlButton-j2iwgi-0 dcGsYY"
        data-testid="LayoutControls__list--icon"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            list-view.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
